examples/04-httproute-and-tlsroute/01-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway-ns
spec:
  gatewayClassName: kgateway
  listeners:
  - name: tls-listener
    port: 8443
    protocol: TLS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Passthrough
